# francis-server

./: .dockerignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md
.github/workflows/: deploy.yaml
infra/: Pulumi.dev.yaml  Pulumi.yaml  package.json
infra/src/: config.ts  index.ts
src/: db.rs  main.rs  model.rs
